# forum

./: .env.sample  Cargo.toml  README.md
api/: .env.sample  Cargo.toml
api/src/: main.rs
api/src/routes/: profiles.rs  users.rs
client/: .prettierrc  package-lock.json  package.json  server.js
client/src/: app.html
client/src/lib/: Comments.svelte  api.js  global.css  util.js
client/src/lib/components/: Comment.svelte  CommentTree.svelte  Comments.svelte  Footer.svelte  ListErrors.svelte  Nav.svelte  PostHeader.svelte  Voter.svelte
client/src/lib/components/voters/: CommentVoter.svelte  ThreadVoter.svelte  Voter.svelte
client/src/routes/: +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
client/src/routes/login/: +page.server.js  +page.svelte
client/src/routes/profile/: +page.server.js  +page.svelte
client/src/routes/recent/: +page.server.js  +page.svelte
client/src/routes/signup/: +page.server.js  +page.svelte
client/src/routes/submit/: +page.server.js  +page.svelte
client/src/routes/t/[slug]/: +page.server.js  +page.svelte
client/src/routes/t/[slug]/[comment_id]/: +page.server.js  +page.svelte
client/src/routes/u/[slug]/: +page.server.js  +page.svelte
db/: init.sql
frontend/: package-lock.json  package.json
server/: .env.sample  Cargo.toml
server/src/: auth.rs  error.rs  lib.rs  main.rs
server/src/routes/: comments.rs  mod.rs  profiles.rs  threads.rs  users.rs
src/: auth.rs  main.rs
src/http/: mod.rs  users.rs
src/routes/: mod.rs  profiles.rs  users.rs
