[package]
name = "forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
argon2 = "0.4.1"
axum = "0.6.9"
axum-macros = "0.3.4"
chrono = "0.4.23"
dotenvy = "0.15.6"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
serde = "1.0.152"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
uuid = "1.3.0"
