[package]
name = "forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Core
axum = "0.6.9"
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

axum-macros = "0.3.4"
serde = { version = "1.0.152", features = ["derive"] }

# Password Hashing
argon2 = "0.4.1"

# Authorization
jsonwebtoken = "8.2.0"
hmac = "0.12.1"
sha2 = "0.10.6"

# Utility
uuid = { version = "1.3.0", features = ["serde"] }
chrono = "0.4.23"
dotenvy = "0.15.6"
rand = "0.8.5"
thiserror = "1.0.38"
time = "0.3.20"
log = "0.4.17"
