[package]
name = "forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Core
axum = "0.6.9"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

axum-macros = "0.3.4"
serde = { version = "1.0.152", features = ["derive"] }

# Password Hashing
argon2 = "0.4.1"

# Authorization
jsonwebtoken = "8.2.0"

# Error Handling
thiserror = "1.0.38"
anyhow = "1.0.69"

# Utility
uuid = { version = "1.3.0", features = ["serde"] }
chrono = "0.4.23"
dotenvy = "0.15.6"
rand = { version = "0.8.5", features = ["min_const_gen"] }
log = "0.4.17"
time = "0.3.20"
